# spiral

./: .dockerignore  .gitignore  Dockerfile  PROJECT_BRIEF.md  README.md  docker-compose.yml  pyproject.toml  server.py
app/: __init__.py  pyproject.toml  routes.py
mosiacs/: AGENTS.md  DEBUG_COLUMN_MODE.md  README.md  index.html  main.js  parser.js  styles.css  visualizer.js
mosiacs/data/: 000013_c.json  00002.c  00002_trace.txt  00003_trace.txt  00004.c  00004.json  00006.json  00012.json  00013.json  bad_syntax.json  big_test_data.json  call_bug.json  code.c  code_trace.txt  data_big_test.json  incude.c  instrumented_00002.c  instrumented_00003.c  instrumented_code.c  runtime.c  runtime_error.json  test_data.json
mosiacs/data/json/: 00001.json  00002.json  00003.json  00013.json  code.json  python.json
mosiacs/data/output/: 00002_c_trace.txt  00004_c_trace.txt  00013_c_trace.txt  instrumented_00002_c.c  (+6 more)
mosiacs/visualizer/: AnimationController.js  BuildingFactory.js  ExplodeManager.js  MaterialManager.js  SceneManager.js  ShapeBuilder.js  SpiralConfig.js  SpiralPathBuilder.js  index.js
parser/: .gitignore  Makefile  Untitled-3.txt  json_output.json  main.py  normalize.py  parser.py  pyproject.toml  run.py
parser/tests/: 00001.c  00001.py  00003.c  00005.c  00006.c  00011.c  00012.c  00013.c  00013.py  00014.c  00014.py  00413.c  a.c  bad_c.c  bad_extension.txt  bad_syntax.c  call_bug.c  infinite_loop.c  runtime_error.c
parser/tracer/: __init__.py  __main__.py  base.py  core.py  registry.py
parser/tracer/languages/: __init__.py  c.py  python.py
(+27 files in other folders)
