[project]
name = "parser"
version = "0.1.0"
description = "Multi-language source code instrumenter for trace visualization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tree-sitter-python>=0.25.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.1",
]

[project.scripts]
tracer = "tracer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tracer"]
